--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Below are links to the css assignments</p>
     <ul>
     <li><a href="./Novus.html">Novus</a></li>
-    <li><a href="./wppusher.html">Amazing</a></li>
+    <li><a href="./wppusher.html">Wp Pusher</a></li>
     
 </body>
 </html>
