--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <ul>
     <li><a href="./Novus.html">Novus</a></li>
     <li><a href="./wppusher.html">Wp Pusher</a></li>
-    
+    <li><a href="./scissor.html">Scissor</a></li>
+    <li><a href="./Huckeberry.html">Huckleberry</a></li>
+    <li><a href="./otter.html">Otter</a></li>
+    <li><a href="./Individuals.html">Individuals</a></li>
 </body>
 </html>
