--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>CSS ASSIGNMENT</h1>
     <p>Below are links to the css assignments</p>
+    <p>Alt School ID: ALT/SOE/024/5442</p>
     <ul>
     <li><a href="./Novus.html">Novus</a></li>
     <li><a href="./wppusher.html">Wp Pusher</a></li>
